--- a/src/components/CSS/Education.css
+++ b/src/components/CSS/Education.css
@@ -88,6 +88,7 @@
     .mobile-education-info h3 {
         font-size: xx-large;
         margin: 0vh;
+        text-decoration: underline;
     }
 
     .mobile-education-info h5 {
